...
                )
            }
            .ignoresSafeArea(.container, edges: .bottom)
            .background { TabBarImageConfigurator() }
            .tabItem {
                Image(systemName: "magnifyingglass")
                    .accessibilityLabel("Search")
            }
            .tag(AppTab.search)

            LazyTab(isSelected: selectedTab == .library) {
                LibraryView(
                    mediaRepository: session.repositories.media,
...
